Archive2/f5/d0f69fdef8e36f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp:14:31: error: definition of ‘void foo::boo::somemethod()’ is not in namespace enclosing ‘foo::boo’ [-fpermissive]
     void foo::boo::somemethod()
                               ^
main.cpp: In function ‘int main()’:
main.cpp:23:7: error: ‘class foo::boo’ has no member named ‘somethod’
     b.somethod();
       ^
